--- a/po/de.po
+++ b/po/de.po
@@ -429,7 +429,7 @@ msgstr "Eingabeumleitung unmöglich"
 
 #: src/gnuwin32/run.c:311
 msgid "Child process not responding.  R will terminate it."
-msgstr ""
+msgstr "Kindprozess antwortet nicht. R beendet den Kindprozess."
 
 #: src/gnuwin32/run.c:354
 #, c-format
@@ -784,9 +784,9 @@ msgid "table entry must be an external pointer"
 msgstr "Tabelleneintrag muss ein externer Zeiger sein"
 
 #: src/main/Rstrptime.h:501 src/main/Rstrptime.h:968
-#, fuzzy, c-format
+#, c-format
 msgid "use of %s for input is not supported"
-msgstr "Mode '%s' wird in call_R nicht unterstützt"
+msgstr "Benutzung von '%s' als Eingabe wird nicht unterstützt"
 
 #: src/main/Rstrptime.h:1222
 msgid "input string is too long"
@@ -833,14 +833,12 @@ msgid "invalid length"
 msgstr "ungültige Länge"
 
 #: src/main/apply.c:96
-#, fuzzy
 msgid "FUN.VALUE must be a vector"
-msgstr "Code muss ein generischer Vektor sein"
+msgstr "FUN.VALUE  muss Vektor sein"
 
 #: src/main/apply.c:98
-#, fuzzy
 msgid "invalid USE.NAMES value"
-msgstr "ungültiger Wert"
+msgstr "ungültiger USE.NAMES Wert"
 
 #: src/main/apply.c:144
 #, c-format
@@ -848,6 +846,8 @@ msgid ""
 "values must be length %d,\n"
 " but FUN(X[[%d]]) result is length %d"
 msgstr ""
+"Werte müssen die Länge %d haben,\n"
+"Ergebnis von FUN(X[[%d]]) hat aber Länge %d"
 
 #: src/main/apply.c:156
 #, c-format
@@ -855,11 +855,13 @@ msgid ""
 "values must be type '%s',\n"
 " but FUN(X[[%d]]) result is type '%s'"
 msgstr ""
+"Werte müssen vom Typ '%s' sein,\n"
+"Ergebnis von FUN(X[[%d]]) ist aber Typ '%s'"
 
 #: src/main/apply.c:174
-#, fuzzy, c-format
+#, c-format
 msgid "type '%s' is not supported"
-msgstr "Mode '%s' wird in call_R nicht unterstützt"
+msgstr "Typ '%s' wird nicht unterstützt"
 
 #: src/main/arithmetic.c:35
 msgid "NaNs produced"
@@ -1386,12 +1388,11 @@ msgstr "'...' in falschem Kontext benutzt"
 
 #: src/main/builtin.c:901
 msgid "'EXPR' is missing"
-msgstr ""
+msgstr "'EXPR' fehlt"
 
 #: src/main/builtin.c:905
-#, fuzzy
 msgid "EXPR must be a length 1 vector"
-msgstr "switch: EXPR muss einen Vektor der Länge 1 zurückgeben"
+msgstr "EXPR muss ein Vektor der Länge 1 sein"
 
 #: src/main/character.c:93 src/main/character.c:116
 #, c-format
@@ -1511,9 +1512,9 @@ msgid "(list) object cannot be coerced to type '%s'"
 msgstr "(list) Objekt kann nicht nach '%s' umgewandelt werden"
 
 #: src/main/coerce.c:1067
-#, fuzzy, c-format
+#, c-format
 msgid "(symbol) object cannot be coerced to type '%s'"
-msgstr "(list) Objekt kann nicht nach '%s' umgewandelt werden"
+msgstr "(symbol) Objekt kann nicht in Typ '%s' umgewandelt werden"
 
 #: src/main/coerce.c:1083 src/main/coerce.c:1382
 msgid "no method for coercing this S4 class to a vector"
@@ -1567,7 +1568,7 @@ msgstr "%s() auf nicht-(Liste oder Vektor) des Typs '%s' angewendet"
 #: src/main/coerce.c:2187 src/main/dotcode.c:763 src/main/dotcode.c:806
 #: src/main/dotcode.c:1630
 msgid "'name' is missing"
-msgstr ""
+msgstr "'name' fehlt"
 
 #: src/main/coerce.c:2194
 msgid "first argument must be a character string"
@@ -1607,13 +1608,13 @@ msgstr ""
 "ist kein S4 Objekt mehr"
 
 #: src/main/coerce.c:2457
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Setting class(x) to \"%s\" sets attribute to NULL; result will no longer be "
 "an S4 object"
 msgstr ""
-"class(x) auf \"%s\" setzen setzt Attribut auf NULL; das Ergebnis ist kein S4 "
-"Objekt mehr"
+"class(x) auf \"%s\" zu setzen, setzt Attribut auf NULL; das Ergebnis ist "
+"kein S4 Objekt mehr"
 
 #: src/main/coerce.c:2487
 msgid "invalid replacement object to be a class string"
@@ -3161,14 +3162,14 @@ msgid "exported symbol '%s' has no value"
 msgstr "exportiertes Symbol '%s' hat keinen Wert"
 
 #: src/main/envir.c:3477
-#, fuzzy, c-format
+#, c-format
 msgid "unknown encoding: %d"
-msgstr "nicht unterstützte Kodierung '%s'"
+msgstr "unbekannte Kodierung: %d"
 
 #: src/main/envir.c:3491
 #, c-format
 msgid "embedded nul in string: '%s'"
-msgstr ""
+msgstr "Zeichenkette '%s' enthält nul Zeichen"
 
 #: src/main/errors.c:181 src/main/errors.c:218
 msgid "interrupts suspended; signal ignored"
@@ -3417,9 +3418,8 @@ msgid "invalid for() loop sequence"
 msgstr "unbrauchbare Sequenz für for() Schleife"
 
 #: src/main/eval.c:1265
-#, fuzzy
 msgid "multi-argument returns are not permitted"
-msgstr "mehrargumentige Rückgaben sind veraltet"
+msgstr "mehrargumentige Rückgaben sind nicht erlaubt"
 
 #: src/main/eval.c:1313
 msgid "invalid (NULL) left side of assignment"
@@ -3455,14 +3455,14 @@ msgid "invalid assignment left-hand side"
 msgstr "ungültige linke Seite in Zuweisung"
 
 #: src/main/eval.c:1578
-#, fuzzy, c-format
+#, c-format
 msgid "argument %d is empty"
-msgstr "Element %d ist leer"
+msgstr "Argument %d ist leer"
 
 #: src/main/eval.c:1581
 #, c-format
 msgid "'%s' is missing"
-msgstr ""
+msgstr "'%s' fehlt"
 
 #: src/main/eval.c:1713
 msgid "invalid formal argument list for \"function\""
@@ -3782,9 +3782,10 @@ msgstr ""
 "kann nicht genug Speicher für lange Zeichenkette in Zeile %d allozieren"
 
 #: src/main/gram.y:2110
-#, fuzzy, c-format
+#, c-format
 msgid "'\\x' used without hex digits in character string starting \"%s\""
-msgstr "\\x' ohne Hex-Ziffern genutzt"
+msgstr ""
+"\\x' ohne Hex-Ziffern in der Zeichenkette beginnened mit \"%s\" genutzt"
 
 #: src/main/gram.y:2123
 #, c-format
@@ -3793,9 +3794,9 @@ msgstr ""
 "\\uxxxx Sequenzen werden nicht zwischen backticks unterstützt (Zeile %d)"
 
 #: src/main/gram.y:2138
-#, fuzzy, c-format
+#, c-format
 msgid "'\\u' used without hex digits in character string starting \"%s\""
-msgstr "\\x' ohne Hex-Ziffern genutzt"
+msgstr "\\u' ohne Hex-Ziffern in der Zeichekette beginnend mit \"%s\" genutzt"
 
 #: src/main/gram.y:2146
 #, c-format
@@ -3809,9 +3810,10 @@ msgstr ""
 "\\Uxxxxxxx Sequenzen werden nicht zwischen backticks unterstützt (Zeile %d)"
 
 #: src/main/gram.y:2173
-#, fuzzy, c-format
+#, c-format
 msgid "'\\U' used without hex digits in character string starting \"%s\""
-msgstr "\\x' ohne Hex-Ziffern genutzt"
+msgstr ""
+"'\\U' ohne Hex-Ziffern in der Zeichenkette beginnend mit \"%s\" genutzt"
 
 #: src/main/gram.y:2181
 #, c-format
@@ -3819,9 +3821,11 @@ msgid "invalid \\U{xxxxxxxx} sequence (line %d)"
 msgstr "ungültige \\U{xxxxxxxx} Sequenz (Zeile %d)"
 
 #: src/main/gram.y:2221
-#, fuzzy, c-format
+#, c-format
 msgid "'\\%c' is an unrecognized escape in character string starting \"%s\""
-msgstr "'\\%c' ist eine unbekannte Escape-Sequenz in einer Zeichenkette"
+msgstr ""
+"'\\%c' ist eine unbekannte Escape-Sequenz in der Zeichenkette beginnend mit "
+"\"%s\""
 
 #: src/main/gram.y:2271
 #, c-format
@@ -3931,19 +3935,19 @@ msgstr "Argument '%s' wird ignoriert"
 
 #: src/main/grep.c:190 src/main/grep.c:277 src/main/grep.c:381
 #: src/main/grep.c:827 src/main/grep.c:1853
-#, fuzzy, c-format
+#, c-format
 msgid "input string %d is invalid UTF-8"
-msgstr "Eingabezeichenkette %d ungültig in dieser locale"
+msgstr "Eingabezeichenkette %d ist unkorrektes UTF-8"
 
 #: src/main/grep.c:255 src/main/grep.c:348
-#, fuzzy, c-format
+#, c-format
 msgid "'split' string %d is invalid UTF-8"
-msgstr "Eingabezeichenkette %d ungültig in dieser locale"
+msgstr "'split' Zeichenkette %d ist unkorrektes UTF-8"
 
 #: src/main/grep.c:259 src/main/grep.c:352 src/main/grep.c:521
-#, fuzzy, c-format
+#, c-format
 msgid "'split' string %d is invalid in this locale"
-msgstr "Eingabezeichenkette %d ungültig in dieser locale"
+msgstr "'split' Zeichenkette %d ist ungültig in dieser Lokalisierung"
 
 #: src/main/grep.c:360 src/main/grep.c:796 src/main/grep.c:1151
 #: src/main/grep.c:1817
@@ -3973,27 +3977,24 @@ msgstr ""
 "\\t'%s'\n"
 
 #: src/main/grep.c:779 src/main/grep.c:1800
-#, fuzzy
 msgid "regular expression is invalid UTF-8"
-msgstr "regular expression ist in dieser Lokalisierung ungültig"
+msgstr "regulärer Ausdruck ist kein gültiges UTF-8"
 
 #: src/main/grep.c:1126
-#, fuzzy
 msgid "'pattern' is invalid UTF-8"
-msgstr "'pattern' ist ungültig in dieser locale"
+msgstr "'pattern' ist kein gültiges UTF-8"
 
 #: src/main/grep.c:1128
-#, fuzzy
 msgid "'replacement' is invalid UTF-8"
-msgstr "'replacement' ist ungültig in dieser locale"
+msgstr "'replacement' ist kein gültiges UTF-8"
 
 #: src/main/grep.c:1132
 msgid "'pattern' is invalid in this locale"
-msgstr "'pattern' ist ungültig in dieser locale"
+msgstr "'pattern' ist ungültig in dieser Lokalisierung"
 
 #: src/main/grep.c:1135
 msgid "'replacement' is invalid in this locale"
-msgstr "'replacement' ist ungültig in dieser locale"
+msgstr "'replacement' ist ungültig in dieser Lokalisierung"
 
 #: src/main/grep.c:1140
 msgid "zero-length pattern"
@@ -4001,9 +4002,8 @@ msgstr "Muster mit Länge 0"
 
 #: src/main/grep.c:1280 src/main/grep.c:1296 src/main/grep.c:1344
 #: src/main/grep.c:1360 src/main/grep.c:1407 src/main/grep.c:1423
-#, fuzzy
 msgid "result string is too long"
-msgstr "Eingabe-Zeichenkette ist zu lang"
+msgstr "Ergebnis-Zeichenkette ist zu lang"
 
 #: src/main/internet.c:90
 msgid "internet routines cannot be accessed in module"
@@ -4056,9 +4056,9 @@ msgid "binary operations require two arguments"
 msgstr "binäre Operationen verlangen zwei Argumente"
 
 #: src/main/logic.c:65 src/main/logic.c:127
-#, fuzzy
 msgid "operations are possible only for numeric, logical or complex types"
-msgstr "Operationen sind nur für numerische und logische Typen möglich"
+msgstr ""
+"Operationen sind nur für numerische, logische oder komplexe Typen möglich"
 
 #: src/main/logic.c:75
 msgid "binary operation on non-conformable arrays"
@@ -4496,14 +4496,12 @@ msgid "Invalid generic function in 'usemethod'"
 msgstr "ungültige generische Funktion in 'usemethod'"
 
 #: src/main/objects.c:408
-#, fuzzy
 msgid "there must be a 'generic' argument"
-msgstr "es muss ein erstes Argument geben"
+msgstr "es muss ein 'generic' Argument geben"
 
 #: src/main/objects.c:412
-#, fuzzy
 msgid "'generic' argument must be a character string"
-msgstr "zweites Argument muss eine Zeichenkette sein"
+msgstr "das 'generic' Argument muss eine Zeichenkette sein"
 
 #: src/main/objects.c:449
 msgid "'UseMethod' called from outside a closure"
@@ -4649,6 +4647,8 @@ msgstr ""
 #, c-format
 msgid "object returned as generic function \"%s\" doesn't appear to be one"
 msgstr ""
+"Das Objekt, das als generische Funktion \"%s\" zurückgegeben wurde, scheint "
+"keine zu sein"
 
 #: src/main/objects.c:1334
 msgid "invalid primitive operation given for dispatch"
@@ -6172,9 +6172,8 @@ msgid "'by' must be finite"
 msgstr "'by' muss endlich sein"
 
 #: src/main/seq.c:680
-#, fuzzy
 msgid "argument must be coercible to non-negative integer"
-msgstr "Argument darf nicht negativ sein"
+msgstr "Argument muss sich in eine  nicht-negative ganze Zahl umwandeln lassen"
 
 #: src/main/serialize.c:223 src/main/serialize.c:253 src/main/serialize.c:276
 msgid "unknown or inappropriate output format"
@@ -6449,7 +6448,7 @@ msgstr ""
 
 #: src/main/source.c:204
 msgid "coercion of 'text' to character was unsuccessful"
-msgstr ""
+msgstr "Umwandlung von 'text' in Zeichenkette fehlgeschlagen"
 
 #: src/main/source.c:220
 #, c-format
@@ -6782,13 +6781,12 @@ msgid "no non-missing arguments to max; returning -Inf"
 msgstr "kein nicht-fehlendes Argument für max; gebe -Inf zurück"
 
 #: src/main/summary.c:798
-#, fuzzy
 msgid "argument to 'which' is not logical"
-msgstr "Argument 'logarithm' muss boolesch sein"
+msgstr "Argument zu 'which' ist nicht  boolesch"
 
 #: src/main/summary.c:907
 msgid "no input has determined the number of cases"
-msgstr ""
+msgstr "Anzahl der Fälle durch keine Eingabe festgelegt"
 
 #: src/main/summary.c:1010
 msgid "not all arguments have the same length"
@@ -6883,9 +6881,8 @@ msgid "cannot find unused tempfile name"
 msgstr "kann keinen ungenutzten temporären Dateinamen finden"
 
 #: src/main/sysutils.c:1372
-#, fuzzy
 msgid "allocation failed in R_tmpnam"
-msgstr "Allokationsfehler in GVText"
+msgstr "Allokationsfehler in R_tmpnam"
 
 #: src/main/sysutils.c:1398
 msgid "proc.time() is not implemented on this system"
@@ -7001,7 +6998,7 @@ msgstr[1] "%d Argumente an '%s' übergeben, welches %d benötigt"
 #: src/main/util.c:440
 #, c-format
 msgid "supplied argument name '%s' does not match '%s'"
-msgstr ""
+msgstr "angegebenes Argument names '%s' passt nicht zu '%s'"
 
 #: src/main/util.c:450
 #, c-format
@@ -7348,9 +7345,8 @@ msgid "'x' must be a square numeric matrix"
 msgstr "'x' muss eine quadratische, numerische Matrix sein"
 
 #: src/modules/lapack/Lapack.c:311
-#, fuzzy
 msgid "'type' must be a character string"
-msgstr "'text' muss eine Zeichenkette sein"
+msgstr "'type' muss eine Zeichenkette sein"
 
 #: src/modules/lapack/Lapack.c:318 src/modules/lapack/Lapack.c:352
 #: src/modules/lapack/Lapack.c:409
@@ -7668,9 +7664,8 @@ msgid "could not open file '%s'"
 msgstr "konnte Datei '%s' nicht öffnen"
 
 #: src/modules/X11/devX11.c:2041
-#, fuzzy
 msgid "Unable to create XImage"
-msgstr "kann pixmap nicht erzeugen"
+msgstr "Kann XImage nicht erzeugen"
 
 #: src/modules/X11/devX11.c:2339
 msgid "type=\"cairo\" is not supported on this build -- using \"Xlib\""
@@ -7732,9 +7727,9 @@ msgid "unable to contact X11 display"
 msgstr "konnte Verbindung zu X11 Display nicht herstellen"
 
 #: src/modules/X11/devX11.c:3337
-#, fuzzy, c-format
+#, c-format
 msgid "clipboard cannot be read (error code %d)"
-msgstr "Zwischenablage kann nicht geöffnet werden oder enthält keinen Text"
+msgstr "Zwischenablage kann nicht gelesen werden (Fehlerkode %d)"
 
 #: src/modules/X11/devX11.c:3371
 msgid "cannot allocate memory for X11Routines structure"
@@ -7805,29 +7800,29 @@ msgid "bessel_y(%g,nu=%g): precision lost in result\n"
 msgstr "bessel_y(%g,nu=%g): Präzision im Ergebnis verloren\n"
 
 #: src/nmath/nmath.h:132
-#, fuzzy, c-format
+#, c-format
 msgid "argument out of domain in '%s'\n"
-msgstr "Wert außerhalb des Bereichs in 'perm'"
+msgstr "Wert außerhalb des Bereichs in '%s'\n"
 
 #: src/nmath/nmath.h:135
-#, fuzzy, c-format
+#, c-format
 msgid "value out of range in '%s'\n"
-msgstr "Wert außerhalb des Bereichs in 'perm'"
+msgstr "Wert außerhalb des Bereichs in '%s'\n"
 
 #: src/nmath/nmath.h:138
-#, fuzzy, c-format
+#, c-format
 msgid "convergence failed in '%s'\n"
-msgstr "open fehlgeschlagen auf %s"
+msgstr "Keine Konvergenz in  '%s'\n"
 
 #: src/nmath/nmath.h:141
 #, c-format
 msgid "full precision may not have been achieved in '%s'\n"
-msgstr ""
+msgstr "eventuell wurde in '%s' nicht die volle Genauigkeit erreicht\n"
 
 #: src/nmath/nmath.h:144
 #, c-format
 msgid "underflow occurred in '%s'\n"
-msgstr ""
+msgstr "Underflow in '%s' aufgetreten\n"
 
 #: src/nmath/pnchisq.c:233
 #, c-format
@@ -7995,9 +7990,9 @@ msgid "'intern' must be logical and not NA"
 msgstr "'intern' muss ein logischer Wert und kein NA"
 
 #: src/unix/sys-unix.c:277
-#, fuzzy, c-format
+#, c-format
 msgid "cannot popen '%s', probable reason '%s'"
-msgstr "kann bzip2-ed Datei '%s' nicht öffnen. Grund evtl. '%s'"
+msgstr "kann nicht popen '%s'. Grund vermutlich '%s'"
 
 #: src/unix/sys-unix.c:282
 #, c-format
