change default device for command-line R on Macs
git-svn-id: https://svn.r-project.org/R/trunk@51386 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -27,6 +27,9 @@ SIGNIFICANT USER-VISIBLE CHANGES
 	all of which use positional matching for their first argument,
 	and also some internal-use-only primitives.
 
+    o	The default device for command-line R at the console on Mac OS X
+	is now quartz() and not X11().
+
 
 NEW FEATURES
 
