add some detection that Tk was started (not yet checked on Windows
git-svn-id: https://svn.r-project.org/R/trunk@51390 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -352,6 +352,11 @@ NEW FEATURES
     o	The PCRE library has been updated to version 8.02, a bug-fix
 	release which also updates tables to Unicode 5.02.
 
+    o	Functions which may use a graphical select.list() (including
+	menu() and install.packages()) now check on a Unix-alike that
+	Tk can be started (and not just
+	capabilities("tcltk") && capabilities("X11")).
+
 
 DEPRECATED & DEFUNCT
 
