--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -2379,18 +2379,18 @@ installed.
 You need a means of compiling C and FORTRAN 77 (see @ref{Using
 FORTRAN}).  Some add-on packages also need a C++ compiler.  Your C
 compiler should be @acronym{IEC}@tie{}60059@footnote{also known as
-@acronym{IEEE}@tie{}754}, POSIX 1003.1 and C99-compliant if at all
-possible.  @R{} tries to choose suitable flags for the C compilers it
-knows about, but you may have to set @code{CC} or @code{CFLAGS}
-suitably.  For recent versions of @command{gcc} with @code{glibc} this
-means including @option{-std=gnu99}@footnote{@option{-std=c99} excludes
-POSIX functionality, but @file{config.h} will turn on all @acronym{GNU}
+@acronym{IEEE}@tie{}754}, POSIX 1003.1 and C99-compliant.  @R{} tries to
+choose suitable flags for the C compilers it knows about, but you may
+have to set @code{CC} or @code{CFLAGS} suitably.  For recent versions of
+@command{gcc} with @code{glibc} this means including
+@option{-std=gnu99}@footnote{@option{-std=c99} excludes POSIX
+functionality, but @file{config.h} will turn on all @acronym{GNU}
 extensions to include the POSIX functionality.}.  If the compiler is
 detected as @command{gcc}, @option{-std=gnu99} will be appended to
 @code{CC} unless it conflicts with a setting of @code{CFLAGS}.  (Note
 that options essential to run the compiler even for linking, such as
-those to set the architecture, should be part of @code{CC} rather than
-of @code{CFLAGS}.)
+those to set the architecture, should be specified as part of @code{CC}
+rather than of @code{CFLAGS}.)
 
 Unless you do not want to view graphs on-screen you need @samp{X11}
 installed, including its headers and client libraries. For recent Fedora
